# PyScript-GitHubRepo

./: .gitignore  README.md  config.example.yaml  main.py  makefile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-001-add-testing-infrastructure.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README_CN.md  agent-skill-examples.md  technical-deep-dive.md
docs/superpowers/plans/: 2026-06-23-product-landing-page-pages-deploy.md
docs/superpowers/specs/: 2026-06-23-product-landing-page-pages-deploy-design.md
public/: index.html
skill/: SKILL.md
src/: __init__.py  api.py  config.py  downloader.py  github_repo_downloader.py  history_report.py  logger.py
src/agent/: __init__.py  filter.py
src/cli/: __init__.py  entry.py  human_runner.py  json_runner.py
src/config/: __init__.py  loader.py  validator.py
src/core/: __init__.py  orchestrator.py  processor.py
src/github/: __init__.py  api.py  downloader.py
src/log/: __init__.py
src/reports/: __init__.py  generator.py  history.py  stats.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_core_orchestrator.py  test_core_processor.py  test_downloader.py  test_history_report.py  test_logger.py  test_regression_issue_1.py  test_regression_issue_3.py  test_regression_issue_5.py  test_regression_issue_7.py  test_regression_issue_9.py
