[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscript-githubrepo"
version = "0.1.0"
description = "A modern, high-performance Python tool for batch downloading/synchronizing GitHub repositories via API with multi-threading, dual-mode support (Git/ZIP), and intelligent filtering."
authors = [{ name = "NotSleeply", email = "notsleeply@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["github", "repository", "downloader", "synchronization", "batch", "git", "api", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
  "selenium>=4.1.0",
  "requests>=2.27.1",
  "beautifulsoup4>=4.10.0",
  "lxml>=4.8.0",
  "uv>=0.5.0",
  "gitpython>=3.1.46",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "tenacity>=9.0.0",
]

[project.scripts]
pyscript-githubrepo = "main:run"
