[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscript-githubrepo"
version = "0.2.0"
description = "A modern, high-performance Python tool for batch downloading/synchronizing GitHub repositories via API with multi-threading, dual-mode support (Git/ZIP), and intelligent filtering."
authors = [{ name = "NotSleeply", email = "notsleeply@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["github", "repository", "downloader", "synchronization", "batch", "git", "api", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
  "requests>=2.27.1",
  "uv>=0.5.0",
  "gitpython>=3.1.46",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "tenacity>=9.0.0",
]

[project.scripts]
pyscript-githubrepo = "main:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
]
agent = [
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
